--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -24,7 +24,7 @@ import ProjectItem from './ProjectItem.astro';
 									width={hero.width / 2}
 									densities={[1.5, 2]}
 									alt="Hero Image"
-									class="absolute top-0 w-1/2 -z-10 h-full w-fit object-cover h-screen "
+									class="absolute top-0 md:w-1/2 -z-10 h-full w-full object-cover"
 								/>
 							}
 						</div>
@@ -63,6 +63,5 @@ import ProjectItem from './ProjectItem.astro';
 	.empty-container img {
 		width: inherit;
 		z-index: -1;
-		width: 50vw;
 	}
 </style>
