--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,7 +3,8 @@
 const textLinks: { label: string; href: string }[] = [
 	// { label: 'IG', href: '#content' },
 	{ label: 'E-mail', href: 'mailto:hello@jeffreyderoode.nl' },
-	{ label: 'Call', href: '#contact' },
+	{ label: 'Call', href: '#
+	' },
 ];
 ---
 
