--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,8 +3,7 @@
 const textLinks: { label: string; href: string }[] = [
 	// { label: 'IG', href: '#content' },
 	{ label: 'E-mail', href: 'mailto:hello@jeffreyderoode.nl' },
-	{ label: 'Call', href: '#
-	' },
+	{ label: 'Call', href: '#contact' },
 ];
 ---
 
