--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,8 +17,8 @@ import hero from '../assets/jdr-cover-doel-01.jpg';
 		/>
 	</div>
 
-	<div class="flex items-center justify-center h-full p-4 copy">
-		<div class="text-center">
+	<div class="flex items-center justify-center h-full py-16 md:p-4 copy">
+		<div class="text-center flex flex-col gap-2 md:gap-4">
 			<p class="uppercase intro text-7xl md:text-5xl lg:text-7xl text-balance">
 				I work on films that broaden horizons and share new perspectives.
 			</p>
