--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,7 +1,7 @@
 <input id="color-mode" type="checkbox" name="color-mode" />
 <label for="color-mode" class="bottom-vw-4 right-vw-8">
-	<span class="dark-mode-hide">Dark Mode</span>
-	<span class="light-mode-hide">Light Mode</span>
+	<span class="dark-mode-hide">Dark</span>
+	<span class="light-mode-hide">Light</span>
 </label>
 
 <style is:global>
@@ -59,6 +59,7 @@
 		display: flex;
 		align-items: center;
 		border-radius: 0.25rem;
+		font-family: var(--font-mono);
 		font-size: var(--text-sm) !important;
 		/* box-shadow:
       0 2px var(--bg),
