--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@
 import MainHead from '../components/MainHead.astro';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
+import ThemeToggle from '../components/ThemeToggle.astro';
 
 interface Props {
 	title?: string | undefined;
@@ -21,6 +22,7 @@ const { title, description } = Astro.props;
 	</head>
 	<body>
 		<div class="color-scheme-wrapper">
+			<ThemeToggle />
 			<Nav />
 			<main>
 				<slot />
@@ -37,7 +39,8 @@ const { title, description } = Astro.props;
 			src="https://code.jquery.com/jquery-3.4.1.min.js"
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			crossorigin="anonymous"
-		></script>
+		>
+		</script>
 		<!-- <script src="assets/scripts/preloader.js"></script> -->
 
 		<!-- <script src="./assets/scripts/owl.carousel.min.js"></script> -->
