--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const currentYear = new Date().getFullYear();
 		<div class="pb-4 md:pb-0">
 			<h3>Contact</h3>
 			<ul class="md:col-span-2" itemscope itemtype="http://schema.org/Person">
-				<li itemprop="jobTitle">Producer</li>
+				<li itemprop="jobTitle" class="hidden">Producer</li>
 				<li>
 					<a href="mailto:hello@jeffreyderoode.nl" itemprop="email">hello@jeffreyderoode.nl</a>
 				</li>
@@ -44,18 +44,8 @@ const currentYear = new Date().getFullYear();
 			</ul>
 		</div>
 		<div class="pb-4 md:pb-0">
-			<h3>Social</h3>
+			<h3 class="hidden">Social</h3>
 			<ul class="social">
-				<li>
-					<a href="https://www.facebook.com/jeffrey.manuel.334" rel="noopener" target="_blank">
-						Facebook
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/jeffreyderoode/" rel="noopener" target="_blank">
-						Instagram
-					</a>
-				</li>
 				<li>
 					<a
 						href="https://www.linkedin.com/in/jeffrey-de-roode-857575139/"
@@ -65,8 +55,25 @@ const currentYear = new Date().getFullYear();
 						LinkedIn
 					</a>
 				</li>
+
+				<li>
+					<a href="https://www.instagram.com/jeffreyderoode/" rel="noopener" target="_blank">
+						Instagram
+					</a>
+				</li>
+
 				<li>
 					<a href="https://vimeo.com/jeffreyderoode" rel="noopener" target="_blank">Vimeo</a>
+				</li>
+				<li>
+					<a
+						href="https://www.facebook.com/jeffrey.manuel.334"
+						rel="noopener"
+						class="hidden"
+						target="_blank"
+					>
+						Facebook
+					</a>
 				</li>
 			</ul>
 		</div>
