--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,7 +7,7 @@ const textLinks: { label: string; href: string }[] = [
 ];
 ---
 
-<nav class="fixed z-50 grid w-full grid-cols-2 outer overflow-hidden">
+<nav class="fixed z-50 grid w-full grid-cols-2 outer overflow-hidden nav">
 	<div class="left">
 		<h1 class="">
 			<a href="#" class="js-anchor-link">Jeffrey de Roode</a>
@@ -37,6 +37,7 @@ const textLinks: { label: string; href: string }[] = [
 		font-size: var(--text-xs);
 		font-weight: 500;
 		padding: var(--space-xs);
+		height: 2.5rem;
 	}
 	h1 {
 		font-family: var(--font-body);
@@ -46,9 +47,58 @@ const textLinks: { label: string; href: string }[] = [
 	.right {
 		padding-left: var(--space-xs);
 	}
+
+	nav.nav-up {
+		transform: translateY(-100%); /* Verbergt de header */
+		transition: transform 0.3s ease;
+	}
+
+	nav.nav-down {
+		transform: translateY(0); /* Toont de header */
+		transition: transform 0.3s ease;
+	}
 </style>
 
 <script>
+	// Verberg header bij scrollen naar beneden
+	let didScroll;
+	let lastScrollTop = 0;
+	const delta = 200;
+	const navbar = document.querySelector('nav');
+	const navbarHeight = navbar.offsetHeight;
+
+	window.addEventListener('scroll', function (event) {
+		didScroll = true;
+	});
+
+	setInterval(function () {
+		if (didScroll) {
+			hasScrolled();
+			didScroll = false;
+		}
+	}, 250);
+
+	function hasScrolled() {
+		const st = window.pageYOffset || document.documentElement.scrollTop;
+
+		// Zorg ervoor dat er meer dan delta wordt gescrold
+		if (Math.abs(lastScrollTop - st) <= delta) return;
+
+		// Als ze naar beneden scrollen en voorbij de navbar zijn, voeg de class .nav-up toe.
+		if (st > lastScrollTop && st > navbarHeight) {
+			// Scroll omlaag
+			navbar.classList.remove('nav-down');
+			navbar.classList.add('nav-up');
+		} else {
+			// Scroll omhoog
+			if (st + window.innerHeight < document.body.scrollHeight) {
+				navbar.classList.remove('nav-up');
+				navbar.classList.add('nav-down');
+			}
+		}
+
+		lastScrollTop = st;
+	}
 	// Function to update the date and time
 	function updateDateTime() {
 		const dateElement = document.getElementById('date');
