--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,8 +12,8 @@ import hero from '../assets/jdr-cover-doel-01.jpg';
 			src={hero}
 			width={hero.width / 2}
 			densities={[1.5, 2]}
-			alt="Jeffreu de Roode"
-			class="absolute z-10 object-cover w-full h-full"
+			alt="Jeffrey de Roode"
+			class="z-10 object-cover w-full h-full"
 		/>
 	</div>
 
