--- a/src/components/FilmCard.astro
+++ b/src/components/FilmCard.astro
@@ -24,11 +24,11 @@ const { data } = Astro.props;
 
 <style>
 	p {
-		color: var(--bg);
+		color: var(--text);
 	}
 
 	.filmcard {
 		padding: var(--space-xs);
-		border-top: 2px solid var(--text);
+		border-top: 2px var(--text) solid;
 	}
 </style>
