--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,8 @@ import hero from '../assets/jdr-cover-doel-01.jpg';
 	</div>
 
 	<div class="flex items-center justify-center h-full py-16 md:p-4 copy">
-		<div class="text-center flex flex-col gap-2 p-vw-2 md:gap-4">
+		<div class="text-center flex flex-col gap-2 p-vw-2
+		 md:gap-4">
 			<p class="uppercase intro text-4xl md:text-4xl lg:text-5xl text-balance">
 				I work on documentary films that broaden horizons, shift perspectives and contribute to
 				making this world a better place.
