--- a/src/components/FilmCard.astro
+++ b/src/components/FilmCard.astro
@@ -13,7 +13,7 @@ type Props = {
 const { data } = Astro.props;
 ---
 
-<div class="grid filmcard md:grid-cols-4">
+<div class="grid filmcard grid-cols-2 md:grid-cols-4">
 	<p>{data.title}</p>
 	<p>{data.director}</p>
 	<p>{data.duration}</p>
