--- a/src/components/FilmList.astro
+++ b/src/components/FilmList.astro
@@ -1,10 +1,8 @@
 ---
 import FilmCard from './FilmCard.astro';
-import { Image } from 'astro:assets';
-import bgImage from '../assets/jdr-cover-doel-02.jpg';
 
 const res = await fetch(
-	'https://script.google.com/macros/s/AKfycbwdKa7W4_D89VmHm6A616cuK96hLqnLQ9ApjrBE_J_9Dhqs6RsweM_vOwrZvx7q6Zy0/exec'
+	'https://script.google.com/macros/s/AKfycbx5CGGJf5WdDbZuRT8JGhSqLdjneCaVGtegEfKZO9TzJ1_0pf3HvK_s4pNojJSrbQ6Z/exec'
 );
 const { data } = await res.json();
 
@@ -12,6 +10,7 @@ const { data } = await res.json();
 ---
 
 <div class="filmlist relative z-50 min-h-svh md:min-h-screen">
+	<h1 class="p-2 pt-vw-52-max@xl text-7xl">Filmography</h1>
 	<!-- <div class="sticky top-0 z-20 min-h-svh md:min-h-screen films">
 		<Image
 			src={bgImage}
