--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -68,7 +68,7 @@ const { imgs: images, img_alts: imageAlts, role, type, title } = entry.data;
 			</div>
 			<div class="flex gap-4 links">
 				<a href="#" class="grow close">close</a>
-				<a href="#" class="grow">trailer</a>
+				<!-- <a href="#" class="grow">trailer</a> -->
 			</div>
 		</div>
 	</div>
