--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,9 +4,9 @@ import { Image } from 'astro:assets';
 import hero from '../assets/jdr-cover-doel-01.jpg';
 ---
 
-<header class="sticky top-0 z-20 flex flex-col min-h-screen md:h-svh md:grid md:grid-cols-2">
+<header class="sticky top-0 z-20 flex flex-col h-screen md:h-svh md:grid md:grid-cols-2">
 	<div
-		class="relative flex items-center justify-center h-full bg-center bg-cover grow visual md:h-screen"
+		class="relative flex items-center justify-center h-full bg-center bg-cover visual md:h-screen"
 	>
 		<Image
 			src={hero}
@@ -17,7 +17,7 @@ import hero from '../assets/jdr-cover-doel-01.jpg';
 		/>
 	</div>
 
-	<div class="flex items-center justify-center h-full py-16 md:p-4 copy">
+	<div class="flex items-center justify-center py-16 md:p-4 copy">
 		<div class="text-center flex flex-col gap-2 p-vw-2
 		 md:gap-4">
 			<p class="uppercase intro text-6xl md:text-5xl lg:text-5xl text-balance">
