--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,8 +20,8 @@ import hero from '../assets/jdr-cover-doel-01.jpg';
 	<div class="flex items-center justify-center py-16 md:p-4 copy">
 		<div class="text-center flex flex-col gap-2 p-vw-2
 		 md:gap-4">
-			<p class="uppercase intro text-6xl md:text-5xl lg:text-5xl text-balance">
-				I work on documentary films that broaden horizons, shift perspectives and contribute to
+			<p class="uppercase intro text-7xl p-2 md:text-5xl lg:text-5xl text-balance">
+				I am a Rotterdam based producer of documentaries and I work on projects that contribute to
 				making this world a better place.
 			</p>
 			<p class="text-xs note">Feel free to reach out.</p>
