--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,8 +8,25 @@ const currentYear = new Date().getFullYear();
 			Jeffrey <br />de Roode
 		</p>
 	</div>
-
-	<div class="content grid grid-cols-2 contact md:grid-cols-4">
+	<div class="content about grid mt-4 grid-cols-1 gap-4 md:grid-cols-4">
+		<p class="text-5xl md:text-3xl brand md:col-span-2 text-balance">
+			I'm a documentary film producer based in Rotterdam. I operate as a producer, executive
+			producer, or line producer on a freelance basis.
+		</p>
+		<p class="text-balance">
+			Following a career in retail and a decade of travelling the world, I felt it was time for a
+			career change. After I quit my job, sold my stuff and travelled some more, I found my calling
+			in the film industry. My experience spans from passion projects, student films and shorts, to
+			commercials, corporate videos and brand movies for all kinds of commercial and non-profit
+			organisations. Ultimately, I gravitated towards documentaries, where I feel most fulfilled.
+		</p>
+		<p class="text-balance">
+			I engage in projects aligned with my values, collaborating with like minded individuals who
+			share a vision that echoes the essence of my love for travelling: to broaden horizons, shift
+			perspectives, and contribute to making this world a better place.
+		</p>
+	</div>
+	<div class="content contact grid grid-cols-2 gap-4 pt-8 md:grid-cols-4">
 		<div class="pb-4 md:pb-0">
 			<h3>Contact</h3>
 			<ul class="md:col-span-2" itemscope itemtype="http://schema.org/Person">
@@ -120,13 +137,13 @@ const currentYear = new Date().getFullYear();
 		background: var(--text);
 		bottom: 0;
 		color: var(--bg);
-		font-family: var(--font-mono);
+
 		font-size: 0.675rem;
 		font-weight: 500;
 		left: 0;
 		line-height: 133%;
 		position: sticky;
-		text-transform: uppercase;
+
 		width: 100%;
 		padding: var(--space-xs);
 		letter-spacing: 0.025rem;
@@ -139,6 +156,12 @@ const currentYear = new Date().getFullYear();
 	footer a:hover {
 		border-bottom: 0.125rem solid var(--bg);
 	}
+	.about {
+	}
+	.contact {
+		font-family: var(--font-mono);
+		text-transform: uppercase;
+	}
 
 	.brand {
 		font-family: var(--font-brand);
@@ -146,9 +169,6 @@ const currentYear = new Date().getFullYear();
 		line-height: 80%;
 	}
 
-	.content {
-		gap: var(--gapborder);
-	}
 	.credits {
 		gap: var(--gapborder);
 		font-size: 0.5rem;
