--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@ const currentYear = new Date().getFullYear();
 
 <footer class="flex flex-col h-screen z-0">
 	<div class="grow content-end">
-		<p class="text-8xl brand leading-3" itemprop="name">
+		<h1 class="text-8xl brand leading-3" itemprop="name">
 			Jeffrey <br />de Roode
-		</p>
+		</h1>
 	</div>
 	<div class="content about grid mt-4 grid-cols-1 gap-4 md:grid-cols-4">
 		<p class="text-5xl md:text-3xl brand md:col-span-2 text-balance">
