--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const currentYear = new Date().getFullYear();
 
 <footer class="flex flex-col h-screen z-0">
 	<div class="grow content-end">
-		<h1 class="text-8xl brand leading-3" itemprop="name">
+		<h1 class="text-8xl text brand leading-3" itemprop="name">
 			Jeffrey <br />de Roode
 		</h1>
 	</div>
