general bg on content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,3 +16,9 @@ import FilmList from '../components/FilmList.astro';
 
 	<FilmList />
 </BaseLayout>
+
+<style>
+	#content {
+		background: var(--bg);
+	}
+</style>
