--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,5 +1,5 @@
 <input id="color-mode" type="checkbox" name="color-mode" />
-<label for="color-mode" class="bottom-vw-4 right-vw-4">
+<label for="color-mode" class="bottom-6 right-6 md:bottom-vw-4 md:right-vw-4">
 	<span class="dark-mode-hide"></span>
 	<span class="light-mode-hide"></span>
 </label>
@@ -61,7 +61,7 @@
 		align-items: center;
 		border-radius: 100vw;
 		font-family: var(--font-mono);
-		font-size: var(--text-xs) !important;
+		font-size: var(--text-s) !important;
 		text-transform: uppercase;
 		/* box-shadow:
       0 2px var(--bg),
@@ -72,7 +72,7 @@
 
 	input[type='checkbox']:focus + label {
 		outline: 2px dashed var(--text);
-		outline-offset: 4px;
+		outline-offset: 2px;
 	}
 
 	label:active {
@@ -84,12 +84,12 @@
 
 	label:after {
 		content: '✔\FE0E';
-		height: 1rem;
-		width: 1rem;
+		height: 1.2rem;
+		width: 1.2rem;
 		/* margin-left: 0.25rem; */
 		border: solid 2px var(--bg);
 		text-align: center;
-		border-radius: 0.5rem;
+		border-radius: 100vw;
 		color: transparent;
 		line-height: 1;
 	}
